--- a/style.css
+++ b/style.css
@@ -5,31 +5,33 @@
 }
 
 html {
-    min-width: 822px;
-    min-height: 772px;
+    min-width: 232px;
+    min-height: 797px;
 }
 
 body {
-    background-color: black;
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji";
+    font-size: 14px;
+    background-color: #0D1117;
     min-height: 100vh;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
 header {
+    background-color: #161B22;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.212);
+    color: rgba(255, 255, 255, 0.7);
     display: flex;
     height: 4rem;
-    background-color: rgba(128, 128, 128, 0.253);
     align-items: center;
     justify-content: center;
 }
 
 main {
-    background-color: white !important;
-    border: 1px solid rgba(0, 0, 0, 0.219);
-    border-radius: 3%;
+    border: 1px solid rgba(255, 255, 255, 0.144);
+    border-radius: 1%;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -37,9 +39,11 @@ main {
 }
 
 footer {
+    background-color:#161B22;
+    color: rgba(255, 255, 255, 0.7);
+    border-top: 1px solid rgba(255, 255, 255, 0.212);
     display: flex;
     height: 3rem;
-    background-color: rgba(128, 128, 128, 0.253);
     align-items: center;
     justify-content: center;
 }
@@ -51,37 +55,43 @@ footer {
 }
 
 .states-box {
+    color: rgba(255, 255, 255, 0.7);
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
 .states-list {
-    background-color: rgba(128, 128, 128, 0.253);
-    border: 1px solid rgba(0, 0, 0, 0.219);
-    border-radius: 2%;
+    background-color: #161B22;
+    border: 1px solid rgba(255, 255, 255, 0.144);
+    border-radius: 1%;
     padding: 1rem;
 }
 
+.map{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
 .map img {
-    height: 500px;
-    width: 500px;
-    padding-left: 2rem;
+    border: 2px solid rgba(255, 255, 255, 0.144);
+    border-radius: 1%;
 }
 
-.my-legend{
-    padding-left: 2rem;
-}
-
-.my-legend .legend-scale ul {
+.legend-labels {
+    background-color:#161B22;
+    color: rgba(255, 255, 255, 0.85);
+    border: 1px solid rgba(255, 255, 255, 0.144);
+    border-radius: 3%;
     margin: 0;
     margin-bottom: 5px;
-    padding: 0;
+    padding: 0.5rem;
     float: left;
     list-style: none;
 }
 
-.my-legend .legend-scale ul li {
+.legend-scale ul li {
     font-size: 80%;
     list-style: none;
     margin-left: 0;
@@ -89,7 +99,7 @@ footer {
     margin-bottom: 2px;
 }
 
-.my-legend ul.legend-labels li span {
+.legend-labels li span {
     display: block;
     float: left;
     height: 16px;
@@ -98,3 +108,16 @@ footer {
     margin-left: 0;
     border: 1px solid #999;
 }
+
+@media screen and (max-width: 814px) {
+    .content {
+      flex-direction: column;
+      gap: 0.5rem;
+    }
+} 
+
+@media screen and (max-width: 556px) {
+    .map img {
+      display: flex;
+    }
+} 
