--- a/style.css
+++ b/style.css
@@ -65,7 +65,16 @@ footer {
     background-color: #161B22;
     border: 1px solid rgba(255, 255, 255, 0.144);
     border-radius: 1%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
     padding: 1rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+
+#statesList {
+    margin-left: 1rem;
 }
 
 .map{
