--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@ body {
 
 header {
     background-color: #161B22;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.212);
     color: rgba(255, 255, 255, 0.7);
     display: flex;
     height: 4rem;
     align-items: center;
     justify-content: center;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2)
 }
 
 main {
@@ -36,12 +36,14 @@ main {
     justify-content: center;
     flex-direction: column;
     overflow: hidden;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 footer {
-    background-color:#161B22;
     color: rgba(255, 255, 255, 0.7);
-    border-top: 1px solid rgba(255, 255, 255, 0.212);
+    border-top: 1px solid rgba(255, 255, 255, 0.1);
+    margin-left: 4rem;
+    margin-right: 4rem;
     display: flex;
     height: 3rem;
     align-items: center;
